style/index.css
/* ... */
.social-icons {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    gap: 1rem;
    align-self: center;
    margin: 0;
    padding: 0;
    font-size: larger;
    text-align: center;
}
.social-media li {
    display: inline-block;
    margin-right: 1rem;
}
.social-icons li:hover{
    color: #ff7700;
    text-shadow: rgb(255, 255, 255) 0px 0px 10px;
}
/* --------------------------------------------------- */
/* Contact us Styling */
.contact-us{
    text-align: center;
    font-size: 1.3rem;
    text-shadow: rgb(0, 0, 0) 0px 3px 10px;
    padding-bottom: 3rem;
    border-bottom: 2px solid #ffffff ;
    margin-bottom: 5rem;
}
.staff{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin: 1rem;
    padding: 1rem;
    background-color: #5C3D2E;
    border-radius: .3rem;
}
.col{
    display: flex;
    flex-direction: column;
    width: 25%;
    margin-bottom: 10rem;
    margin-left: .5rem;
    margin-right: .5rem;
    padding: .8rem;
    background-color: #6B240C;
    border-radius: 1rem;
    box-shadow: rgb(192, 164, 142) 0px 0px 12px;
}
#one{
    width: 40%;
    height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;

}
#two, #three, #four, #five{
    width: 40%;
    height: 100%; 
    display: block;
    padding-bottom: rem;
    margin-left: auto;
    margin-right: auto;
    object-fit: cover;
    margin-bottom: 8rem;
}
.ceo-img{
    width: 100%;
    height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    object-fit: cover; 

}
.Ceo p{
    text-align: center;
    margin-top: .5rem;
}
.Ceo a{
    text-align: center;
    margin-top: .5rem;
    text-decoration: underline;
    color: #997c74;
}
.employee-img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    margin-left: auto;
    margin-right: auto;

}
.Employee{
    text-align: center;
}
.Employee p{
    text-align: center;
    margin-top: -.1rem;
}
.Employee a{
    text-align: center;
    margin-top: -.1rem;
    text-decoration: underline;
    color: #997c74;
}
a:hover{
    color: #ff7700;
    text-shadow: rgb(255, 255, 255) 0px 0px 10px;

}
form{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1rem;
    padding: 1rem;
    background-color: #2D2424;
    border-radius: .3rem;
}
#contact-form{
    border: solid 6px #9b9b9b81;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    background-color:#493a3a;
    border-radius: 1rem;
}
#contact-form input, textarea{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1rem;
    padding: 1rem;
    font-size: larger;
    background-color: #414141;
    border:  3px solid #b8b8b8;
    border-radius: .3rem;
}
#contact-form input:hover, textarea:hover{
    background-color: #5a5a5a;
}

.Send-btn{
    padding: 1rem;
    background-color: #5a5a5a;
    border-radius: .3rem;
    font-size: 1.2rem;
    text-shadow: none;
    cursor: pointer;
}
.Send-btn:hover{
    background-color: #414141;
}
/* ------------------------------------------------ */
/* About us page */
#about-us{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1rem;
    padding: 1rem;
    background-color: #5c3d2e00;
    border: solid 4px #9b9b9b81;
    border-radius: 1rem;
}
.about-us-card{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1rem;
    padding: 1rem;
    background-color: #807e7d57;
    border-radius: .3rem;

}


/* -------------------------------------- */
/* Responsive Design */
@media (max-width:1440px){
    .Ramen-Shop-Text{
        font-size: 3rem;
    }
    .ramen-shop-img{
        height: 30rem;
    }
    .menu-item img{
        height: 300px;
    }
    .menu-item{
        width: 40%;
    }
    .opening-hours-card{
        font-size: 1.5rem;
    }
    .staff{
        width: 100%;
    }
    .col{
        width: 100%;
    }
    #one{
        width: 100%;
        height: 200px;
    }
    .ceo-img{
        width: 100%;
        height: 200px;
    }
    #two, #three, #four, #five{
        width: 100%;
        height: 100px;
    }
    .social-icons{
        font-size: 1rem;
    }
    .footer-text{
        font-size: 1rem;
    }
    .contact-us{
        font-size: 1rem;
    }
    form{
        font-size: 1rem;
    }
    input, textarea{
        font-size: 1rem;
    }
    .social-icons{
        font-size: 2rem;
    }
    #one{
        height: 50%;
        width: 50%;
    }
    #two, #three, #four, #five{
        width: 50%;
        height: 50%;
    }
    .ceo-img{
        width: 100%;
        height: 100%;
    }
    .employee-img{
        width: 100%;
        height: 100%;
    }
    textarea{
        height: 100px;
        width: 100%;
    }
    #contact-form{
        border: solid 6px #9b9b9b81;
        width: 50%;
        margin-left: auto;
        margin-right: auto;
        background-color:#493a3a;
    }
}
/* ... */

